Root shows latest posts.
Rss fixed with folder.

--- a/views/wiki.erb
+++ b/views/wiki.erb
@@ -5,6 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<title>Alcides Fonseca Wiki</title>
+	<link rel="alternate" type="application/rss+xml" title="Blog (RSS)" href="/rss.xml" />
 	<link rel="stylesheet" href="/wiki.css" type="text/css" media="screen" title="no title" charset="utf-8">
 </head>
 
